--- a/content/pages/rules/credentials/358/index.adoc
+++ b/content/pages/rules/credentials/358/index.adoc
@@ -1,6 +1,6 @@
 :slug: rules/358/
 :category: credentials
-:description: This requirement establishes the importance of invalidating previous OTPs when a new one is generated.
+:description: This requirement establishes the importance of notifying users when their credentials are about to expire.
 :keywords: Credentials, Password, Expiration, Notification, ASVS, CWE, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
