--- a/content/pages/findings/hygiene/060/index.adoc
+++ b/content/pages/findings/hygiene/060/index.adoc
@@ -1,5 +1,5 @@
 :slug: findings/060/
-:description: The purpose of this page is to present information about the set of findings reported by Fluid Attacks. In this case, the finding presents information about vulnerabilities arising from catching generic exceptions, recommendations to avoid them and related security requirements.
+:description: In this case, the finding presents information about vulnerabilities arising from catching generic exceptions.
 :keywords: Insecure, Generic, Exception, Error, Unexpected, Handling
 :findings: yes
 :type: hygiene
@@ -27,3 +27,5 @@ caught by the "*catch*" statement.
 == Rules
 
 . [[r1]] [inner]#link:/web/rules/161/[R161. Define secure default options]#
+
+. [[r2]] [inner]#link:/web/rules/359/[R359. Avoid using generic exceptions]#
