--- a/skims/static/translations/findings/f009.yaml
+++ b/skims/static/translations/findings/f009.yaml
@@ -1,3 +1,6 @@
+src.lib_path.f009.aws_credentials.description:
+  en: AWS credential in {path}
+  es: Credencial de AWS en {path}
 utils.model.finding.enum.f009.description:
   en: >
     The source code repository contains sensitive information such as
